added ascii art

--- a/README
+++ b/README
@@ -1,3 +1,41 @@
+................................................................................
+................................................................. ... ..........
+... ...88888......788888O ..........88888.......=888888 ......8888 .. 8888......
+.....=8888888O....$88888888=.......$88888.......=888888888....8888...,888O......
+.... 888888888,...$888888888O......888888 ......=8888888888...8888.. 8888.......
+....8888O.8888O ..$8888I8888O .....8888888......=8888,O8888 ..8888. .888O.......
+....8888...8888...$8888..88888.....8888888......=8888..88888..8888..8888........
+....8888...8888...$8888...8888....+8888888......=8888...8888..8888..8888....... 
+....8888 ..~. ....$8888...8888 ...8888:888......=8888...8888..8888.8888........ 
+....8888O.........$8888.. 8888....888O.888$.....=8888...8888..8888 888O.........
+.....8888I........$8888...8888....8888.8888.....=8888..8888$..88888888I.........
+.....88888........$8888  8888.....888..8888.....=8888.O8888...888888888 ........
+..... 88888.......$8888888888....8888..Z888.....=888888888~...888888888.........
+ ......88888......$888888888.....8888...888=....=88888888O....888888888.........
+........8888O.....$8888888. .....88888888888....=8888O8888 ...8888888888........
+........:8888O....$8888..........88888888888. ..=8888.8888 ...88888.8888........
+.........88888....$8888.........O88888888888....=8888.8888....88888.8888 .......
+ .........88888...$8888.........8888....O888 ...=8888.~8888...8888..8888+.......
+... . .:.. 8888...$8888.........8888.....888O...=8888. 8888 ..8888...8888.......
+...8888?...8888...$8888.........888?.....O88O...=8888..O888 ..8888.. 8888 ......
+...O888O...8888...$8888........=..  .~+.. ... ..=8888..8888...8888.. 8888...... 
+....8888 ..O888...$8888.........,88888888888....=8888..~8888..8888...+888O......
+....888888O8888...$8888....... 888888888888888.. .. ....8888..8888... 8888......
+....$888888888 ...,..........888888888888888888...............8888... 8888......
+.... +8888888.............. $88888888888+D888888..............ZZZZ ...O888,.....
+........ ~ ...............$ 888888888O??$88888888.8 .................. ,,,:.....
+.........................O ~88888888?++$88888888O.~.............................
+...88888888888888888888888.7888888?++???+?8888888. 888888888888888888888888 ....
+.........................$.:888888888+?+888888888.+ ............................
+................ ......  .O.88888888++O8888888888.O ... ........................
+........................... ,888888?Z88888888888. ..............................
+.............................?888O+888888888888 ................................
+...............................888888888888888..................................
+................................ 8888888888~....................................
+................................................................................
+.......................... .................................. ........... ......
+................  ..... ..  ..... ........... ......  ..  ... ...... ... . .  ..
+
 Spark - a Sinatra inspired micro web framework
 ----------------------------------------------
 
@@ -59,3 +97,4 @@ public class SparkTest {
         });
     }
 }
+
