--- a/README
+++ b/README
@@ -226,6 +226,8 @@ public class Books {
 
 Example showing a very simple (and stupid) autentication filter that is executed before all other resources:
 
+<code>
+
 import java.util.HashMap;
 import java.util.Map;
 
@@ -279,3 +281,5 @@ public class FilterExample {
     }
     
 }
+
+</code>
