changed to static imports

--- a/README
+++ b/README
@@ -3,17 +3,23 @@ Spark - a Sinatra inspired micro web framework
 
 Getting started:
 
+import static spark.Spark.*;
+
 import spark.*;
 
 public class HelloWorld {
-    public static void main(String[] args) {
-        Spark.get(new Route("/hello") {
-            @Override
-            public Object handle(Request request, Response response) {
-                return "Hello World!";
-            }
-        });
-    }
+
+   public static void main(String[] args) {
+      
+      get(new Route("/hello") {
+         @Override
+         public Object handle(Request request, Response response) {
+            return "Hello World!";
+         }
+      });
+
+   }
+
 }
 
 View at: http://localhost:4567/hello
@@ -33,10 +39,11 @@ Examples:
 
 Simple example showing some basic functionality:
 
+import static spark.Spark.*;
+
 import spark.Request;
 import spark.Response;
 import spark.Route;
-import spark.Spark;
 
 /**
  * A simple example just showing some basic functionality
@@ -45,23 +52,23 @@ public class SimpleExample {
     
     public static void main(String[] args) {
         
-        //  Spark.setPort(5678); <- Uncomment this if you wan't spark to listen on a port different than 4567.
+        //  setPort(5678); <- Uncomment this if you wan't spark to listen on a port different than 4567.
         
-        Spark.get(new Route("/hello") {
+        get(new Route("/hello") {
             @Override
             public Object handle(Request request, Response response) {
                 return "Hello World!";
             }
         });
         
-        Spark.post(new Route("/hello") {
+        post(new Route("/hello") {
             @Override
             public Object handle(Request request, Response response) {
                 return "Hello World: " + request.body();
             }
         });
         
-        Spark.get(new Route("/private") {
+        get(new Route("/private") {
             @Override
             public Object handle(Request request, Response response) {
                 response.status(401);
@@ -69,14 +76,14 @@ public class SimpleExample {
             }
         });
         
-        Spark.get(new Route("/users/:name") {
+        get(new Route("/users/:name") {
             @Override
             public Object handle(Request request, Response response) {
                 return "Selected user: " + request.params(":name");
             }
         });
         
-        Spark.get(new Route("/news/:section") {
+        get(new Route("/news/:section") {
             @Override
             public Object handle(Request request, Response response) {
                 response.type("text/xml");
@@ -84,7 +91,7 @@ public class SimpleExample {
             }
         });
         
-        Spark.get(new Route("/protected") {
+        get(new Route("/protected") {
             @Override
             public Object handle(Request request, Response response) {
                 halt(403, "I don't think so!!!");
@@ -92,7 +99,7 @@ public class SimpleExample {
             }
         });
         
-        Spark.get(new Route("/redirect") {
+        get(new Route("/redirect") {
             @Override
             public Object handle(Request request, Response response) {
                 response.redirect("/news/world");
@@ -100,7 +107,7 @@ public class SimpleExample {
             }
         });
         
-        Spark.get(new Route("/") {
+        get(new Route("/") {
             @Override
             public Object handle(Request request, Response response) {
                 return "root";
@@ -114,6 +121,8 @@ public class SimpleExample {
 
 A simple RESTful example showing howto create, get, update and delete book resources:
 
+import static spark.Spark.*;
+
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Random;
@@ -121,7 +130,6 @@ import java.util.Random;
 import spark.Request;
 import spark.Response;
 import spark.Route;
-import spark.Spark;
 
 /**
  * A simple RESTful example showing howto create, get, update and delete book resources.
@@ -137,7 +145,7 @@ public class Books {
         
         // Creates a new book resource, will return the ID to the created resource
         // author and title are sent as query parameters e.g. /books?author=Foo&title=Bar
-        Spark.post(new Route("/books") {
+        post(new Route("/books") {
             Random random = new Random();
             @Override
             public Object handle(Request request, Response response) {
@@ -154,7 +162,7 @@ public class Books {
         });
         
         // Gets the book resource for the provided id
-        Spark.get(new Route("/books/:id") {
+        get(new Route("/books/:id") {
             @Override
             public Object handle(Request request, Response response) {
                 Book book = books.get(request.params(":id"));
@@ -169,7 +177,7 @@ public class Books {
         
         // Updates the book resource for the provided id with new information
         // author and title are sent as query parameters e.g. /books/<id>?author=Foo&title=Bar
-        Spark.put(new Route("/books/:id") {
+        put(new Route("/books/:id") {
             @Override
             public Object handle(Request request, Response response) {
                 String id = request.params(":id");
@@ -192,7 +200,7 @@ public class Books {
         });
         
         // Deletes the book resource for the provided id 
-        Spark.delete(new Route("/books/:id") {
+        delete(new Route("/books/:id") {
             @Override
             public Object handle(Request request, Response response) {
                 String id = request.params(":id");
@@ -207,7 +215,7 @@ public class Books {
         });
         
         // Gets all available book resources (id's)
-        Spark.get(new Route("/books") {
+        get(new Route("/books") {
             @Override
             public Object handle(Request request, Response response) {
                 String ids = "";
