--- a/changeset/2.9.4-changeset.md
+++ b/changeset/2.9.4-changeset.md
@@ -1,1 +1,3 @@
-
+**Spark 2.9.4**
+===============
+- Update to latest jetty version <a href="https://github.com/perwendel/spark/pull/1196">#1196</a>
