--- a/changeset/2.9.4-changeset.md
+++ b/changeset/2.9.4-changeset.md
@@ -1,3 +1,4 @@
 **Spark 2.9.4**
 ===============
+- Update Jetty to 9.4.33.v20201020 to fix CVE-2020-27216 <a href="https://github.com/perwendel/spark/pull/1196">#1201</a>
 - Update to latest jetty version <a href="https://github.com/perwendel/spark/pull/1196">#1196</a>
